--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# Initialize database with data
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:db/init.sql
+spring.jpa.defer-datasource-initialization=true
